# cursor-ml-starter

./: -  .dockerignore  .env.test  .gcloudignore  .gitignore  .pre-commit-config.yaml  .tool-versions  CLOUD_RUN_UPDATE.md  CURSOR_INTEGRATION_README.md  DEPLOY_CHECKLIST.md  DONE_DONE_CHECKLIST.md  DROP_IN_HYBRID_README.md  Dockerfile  Dockerfile.enricher  ENTERPRISE_HANDOVER.md  GO_LIVE_CHEATSHEET.md  GO_LIVE_PLAYBOOK.md  HYBRID_LLM_GUIDE.md  INTEL_SHOP_DESIGN.md  Makefile  PARANOID_V5_README.md  PRODUCTION_CHECKLIST.md  README.md  SELFLEARN_README.md  VISUAL_NEWSWIRE_LAUNCH.md  backround agents  cloudbuild.enricher.yaml  cursor paranoid  docker-compose.yml  env.example  hersh_duotone_ui.patch  package-lock.json  package.json  patch.diff  pyproject.toml  pyrightconfig.json  report.enriched.json  requirements-api.txt  requirements-dev.txt  requirements.txt  (+2 more)
app/: main.py
artifacts/: feed_item_schema.json  metrics.json  model.joblib
config/: hybrid.yaml  hybrid_llm.yaml  paranoid_v5.yaml  selflearn.yaml
cursor_ml_starter.egg-info/: PKG-INFO  SOURCES.txt
data/: data.csv  paranoid.csv  paranoid_mock.csv  paranoid_real.csv
docs/: PARANOID_BUDGET_RUNBOOK.md
monitoring/: grafana-alerts-config.json  grafana-paranoid-budget.json  grafana-paranoid-dashboard.json  pagerduty-routing.json  prometheus-alert-rules.yaml  prometheus-pushgateway.yml  prometheus.yml  slack-block-templates.json  urlmap-fixed.yaml
scripts/: build_enrich_summary_env.py  build_trends_feeds.py  deploy_artifacts.py  deploy_cloud_run.sh  deploy_paranoid_full.sh  drift_detector.py  enrich_simple.py  (+39 more)
(+101 files in other folders)
