[project]
name = "cursor-ml-starter"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = { "src" = "src" }

[project.scripts]
cursor-ml = "src.cli:main"

[tool.ruff]
line-length = 100
exclude = [".venv", "artifacts", ".git", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
